--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src='main.js'></script>
 </head>
+<nav class="navbar navbar-expand-lg bg-body-tertiary secondary">
+  <div class="container-fluid secondary">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/ujkupon">Uj kupon</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <body class="text-bg-secondary p-3">
   <table class="table table-dark table-striped">
     <tr>
