A post nem mukodott

--- a/views/ujKuponMegadas.ejs
+++ b/views/ujKuponMegadas.ejs
@@ -36,7 +36,7 @@
           </label>
           <p>Hány százalékos kupon:</p>
           <label>
-            <input class="form-control" type="text"> <br>
+            <input class="form-control" type="number"> <br>
           </label>
          <p> A kupon kódja:</p>
           <label>
